# prisma-oxigen

./: Cargo.toml  README.md
prisma/: schema.prisma
src/: main.rs
src/models/: generator.rs  mod.rs
src/models/prisma/: request.rs  response.rs  rpc.rs
src/modules/: generator.rs  handler.rs  mod.rs
src/modules/oxigen/: generate_callback.rs  generator.rs  handler.rs  manifest_callback.rs  mod.rs
src/modules/prisma/: binary_paths.rs  binary_target.rs  connector.rs  data_source.rs  generator_config.rs  generator_options.rs  manifest.rs  mod.rs  provider.rs  request.rs  response.rs  string_or_env.rs
src/modules/prisma/dmmf/: data_model.rs  data_model_enum.rs  deprecation.rs  document.rs  field.rs  field_default.rs  field_kind.rs  field_namespace.rs  input.rs  input_object_types.rs  input_type.rs  input_type_constraints.rs  input_type_meta.rs  input_type_ref.rs  mappings.rs  mod.rs  model.rs  primary_key.rs  schema.rs  schema_arg.rs  type_ref.rs  unique_index.rs
